--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+textarea {
+	/* font-size: 0.8rem;
+	letter-spacing: 1px;
+	padding: 10px;
+	max-width: 100%;
+	line-height: 1.5;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	box-shadow: 1px 1px 1px #999; */
+	resize: both;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#preview code {
+	background: white;
+	font-size: 0.875rem;
+	/* font-weight: bold; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#preview pre {
+	display: block;
+	overflow: auto;
+	background: white;
+	padding: 5px;
+	line-height: 1.2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#preview blockquote {
+	border-left: 3px solid white;
+	/* color: #224b4b; */
+	padding-left: 5px;
+	margin-left: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+#preview img {
+	/* display: block; */
+	max-width: 80%;
+	height: 35px;
+	background-color: white;
+	padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editorWrap .toolbar,
+.previewWrap .toolbar {
+	font-weight: bold;
+	padding-left: 5px;
+}
+.sizing-button {
+	cursor: pointer;
+}
+.editorWrap textarea {
+	width: 99%;
+	min-height: 200px;
+	margin-bottom: -5px;
+	/* resize: vertical; */
+	outline: none;
+	padding-left: 5px;
+	padding-top: 5px;
+	font-size: 0.875rem;
+}
+
+.editorWrap textarea {
+	/* background-color: #c0d8d8;
+	border: 1px solid #1d2f2f; */
+	box-shadow: 1px 1px 10px 2px #3a5f5f;
+	border: none;
+}
+
+.previewWrap .form-control {
+	box-shadow: 1px 1px 10px 2px #3a5f5f;
+	border: none;
 }
